# RL_collision_avoidance

./: .gitignore  INSTALATION_INSTRUCTIONS.md  README.md  ROS2_CHEAT_SHEET.md  VPN_port_forwarding.sh  requirements.txt
RL_collision_avoidance_env/: pyvenv.cfg
Training/code/: RLEnv.py  custom_callbacks.py  data_handling.py  plot_data.py  predictor.py  test.py  test_RL.py  train_DDPG.py  train_PPO.py  train_RL.py
final_models/ActionDifference/PPO_ACTION_DIFFERENCE_OFF_1/: final_vecnormalize.pkl
final_models/ActionDifference/PPO_ACTION_DIFFERENCE_OFF_2/: final_vecnormalize.pkl  parameters.txt
final_models/ActionDifference/PPO_ACTION_DIFFERENCE_OFF_3/: final_vecnormalize.pkl
final_models/ActionDifference/PPO_ACTION_DIFFERENCE_OFF_4/: final_vecnormalize.pkl
final_models/ActionDifference/PPO_ACTION_DIFFERENCE_OFF_5/: final_vecnormalize.pkl
final_models/ActionDifference/PPO_ACTION_DIFFERENCE_ON_1/: final_vecnormalize.pkl
final_models/ActionDifference/PPO_ACTION_DIFFERENCE_ON_2/: final_vecnormalize.pkl
final_models/PPO_95%/: final_vecnormalize.pkl
final_models/PPO_99.7%/: final_vecnormalize.pkl
final_models/PPO_good/: final_vecnormalize.pkl  parameters.txt
final_models/PPO_ok_1/: final_vecnormalize.pkl  parameters.txt
final_models/PPO_ok_2/: final_vecnormalize.pkl  parameters.txt
final_models/PPO_ok_3/: final_vecnormalize.pkl  parameters.txt
ros2_ws/src/simulator/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/simulator/simulator/: RL_simulator.py
ros2_ws/src/simulator/src/: ekf.cpp  mpc.cpp  object.cpp
(+349 files in other folders)
